change memory config for church-people module